CIL-414: Introduces an ansible external variable openshift_persist_registry
this controls that:
1. ec2 instance userdata for infra nodes optionally creates a directory with the correct permissions via oadm
2. the master set up the registry in scc and  creates/modifies the docker registry pod

--- a/playbooks/aws/openshift-cluster/templates/user_data.j2
+++ b/playbooks/aws/openshift-cluster/templates/user_data.j2
@@ -20,3 +20,9 @@ write_files:
   content: |
     Defaults:{{ deployment_vars[deployment_type].ssh_user }} !requiretty
 {% endif %}
+{% if type in ['node'] and sub_host_type in ['infra'] and openshift_persist_registry is defined and openshift_persist_registry | bool %}
+runcmd:
+  - mkdir -p /mnt/registry
+  - chown 1001:root /mnt/registry
+{% endif %}
+
